--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>hello world</h1>
+    <div class="container">
+      <h3 class="location">riverside</h3>
+      <p class="name"></p>
+      <div class="temperature-container">
+        <p class="temperature">50</p>
+        <p class="unit">F</p>
+      </div>
+      <img class="temp-icon" src="" alt="forecast icon" />
+      <p class="forecast">short forecast</p>
+    </div>
 
     <script src="app.js"></script>
   </body>
